<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="170dp"
        android:layout_height="120dp"
        android:contentDescription="@string/descripcionImagen"
        app:srcCompat="@drawable/hourglass_icon_cartoon_style_vector"
        tools:layout_editor_absoluteX="120dp"
        tools:layout_editor_absoluteY="53dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        style="@style/Titulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp" />


    <Spinner
        android:id="@+id/spinner"
        android:layout_width="163dp"
        android:layout_height="36dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="80dp"
        android:entries="@array/opciones"
        app:layout_constraintBottom_toTopOf="@id/button"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toEndOf="@id/textView3"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Botoncalcular"
        style="@style/botoncolor"
        android:layout_marginBottom="40dp"
        tools:layout_editor_absoluteX="158dp"
        tools:layout_editor_absoluteY="647dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingresar"
        style="@style/Subtitulo"
        tools:layout_editor_absoluteX="174dp"
        tools:layout_editor_absoluteY="220dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/editTextDate"

        android:layout_marginTop="80dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Text3"
        style="@style/Subtitulo"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="527dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="88dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/spinner"
        app:layout_constraintBottom_toTopOf="@id/button"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Text4"
        tools:layout_editor_absoluteX="60dp"
        tools:layout_editor_absoluteY="577dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button"
        app:layout_constraintTop_toBottomOf="@id/spinner"/>

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="256dp"
        android:layout_height="45dp"
        android:layout_marginBottom="40dp"
        android:ems="10"
        android:hint="@string/descripcionFecha"
        android:focusable="false"
        android:clickable="true"
        android:inputType="date"
        app:layout_constraintBottom_toTopOf="@id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
       />

</androidx.constraintlayout.widget.ConstraintLayout>